
Version 1.0.140 Released Oct 12, 2011

    - Added PropertyDef
    - Added VaadinApplicationScope
    - Added VaadinApplicationListener
    - Added CloseListener interface to ContextApplication

Version 1.0.134 Released Sep 18, 2011

    - Update for latest Vaadin version
    - Added ContextApplication Vaadin helper class
    - Add support for JiBX parsing of templated Spring EL expressions
    - Added "single-update" attribute to <dellroad-stuff:sql-update> tag
    - Fixed bug in <dellroad-stuff:sql-update> parser ignoring "depends-on"

Version 1.0.119 Released Aug 28, 2011

    - Changed TimedWait to use nanoTime() instead of currentTimeMillis()
    - Added ThreadParkingLot, ParseContext, DateEncoder, DoubleFormat, LinkedList

Version 1.0.100 Released May 10, 2011

    - Added parse() methods taking explicit target to SimpleObjectParser
    - Fixed bug in SimpleObjectParser.parse() parsing regex like "..(({foo}.."
    - Fixed bug in StringEncoder.enquote(): nested quotes were not being escaped
    - Added StringEncoder.dequote() and StringEncoder.enquotedLength()

Version 1.0.92 Released April 25, 2011

    - Added SimpleObjectParser.parse() method taking a "named subgroup" regex
    - Added BigFatLock.isLockHeld() and BigFatLockHeldAdvice
    - Added NullModemOutputStream

Version 1.0.74 Released April 19, 2011

    - AsyncInputStream now reports ALL exceptions to handleException()
    - Simplified and fixed bugs in AsyncOutputStream
    - Added NullModemInputStream

Version 1.0.68 Released April 11, 2011

    - Added PrimitiveSwitchAdapter, ListableHashSet, NamedArgumentFormatter
    - Avoid spin loop in AsyncOutputStream from unexpected exceptions

Version 1.0.60 Released March 10, 2011

    - Fix bug that caused libreadline-java native code to crash
    - Added Vaadin LoggingApplication support superclass
    - Added WebContextApplicationServlet as a replacement for
      AutowiringApplicationServlet, which is now deprecated